--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,66 @@
-version: '3.8'
-
 services:
-  web:
-    build: .
-    ports:
-      - "8000:8000"
+  django:
+    build:
+      context: .
+      dockerfile: Dockerfile.django
+    container_name: django_app
+    restart: always
     volumes:
       - .:/app
-    command: python manage.py runserver 0.0.0.0:8000
+    env_file:
+      - .env
+    depends_on:
+      - db
+      - redis
+    ports:
+      - "8000:8000"
+
+  nginx:
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
+    container_name: nginx_server
+    restart: always
+    ports:
+      - "80:80"
+    depends_on:
+      - django
+    volumes:
+      - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf
+
+  celery:
+    build:
+      context: .
+      dockerfile: Dockerfile.celery
+    container_name: celery_worker
+    restart: always
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    depends_on:
+      - django
+      - redis
+
+  redis:
+    build:
+      context: .
+      dockerfile: Dockerfile.redis
+    container_name: redis_server
+    restart: always
+    ports:
+      - "6379:6379"
+
+  db:
+    build:
+      context: .
+      dockerfile: Dockerfile.postgresql
+    container_name: postgres_db
+    restart: always
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    env_file:
+      - .env
+
+volumes:
+  postgres_data:
