--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,131 @@
-asgiref
-Babel
-certifi
-charset-normalizer
-Django
-django-autocomplete-light
-django-htmx
-django-jalali
-django-sslserver
-gunicorn
-idna
-jalali_core
-jdatetime
-pymysql
-packaging
-pillow
-pip
-psycopg2-binary
-requests
-sqlparse
-tzdata
-urllib3
-waitress
-whitenoise
-celery
-python-decouple
-unidecode
-medianasms
-kavenegar
+absl-py==2.1.0
+amqp==5.3.1
+asgiref==3.8.1
+astunparse==1.6.3
+Babel==2.15.0
+billiard==4.2.1
+celery==5.4.0
+certifi==2024.7.4
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cloudpickle==3.0.0
+colorama==0.4.6
+contourpy==1.2.1
+cryptography==43.0.1
+cssselect2==0.7.0
+cycler==0.12.1
+Django==5.0.6
+django-admin-rangefilter==0.13.0
+django-autocomplete-light==3.11.0
+django-dbbackup==4.2.1
+django-environ==0.11.2
+django-extensions==3.2.3
+django-filer==3.1.3
+django-htmx==1.19.0
+django-jalali==7.1.0
+django-js-asset==2.2.0
+django-json-widget==2.0.1
+django-modeltranslation==0.19.9
+django-mptt==0.16.0
+django-polymorphic==3.1.0
+django-redis==5.4.0
+django-rq==2.10.2
+django-sslserver==0.22
+django-webp-converter==0.3.0
+dnspython==2.7.0
+easy-thumbnails==2.8.5
+eventlet==0.38.0
+filelock==3.14.0
+flatbuffers==24.3.25
+flower==2.0.1
+fonttools==4.53.0
+fsspec==2024.6.0
+gast==0.5.4
+google-pasta==0.2.0
+greenlet==3.1.1
+grpcio==1.64.1
+gunicorn==22.0.0
+gym==0.26.2
+gym-notices==0.0.8
+h11==0.14.0
+h5py==3.11.0
+humanize==4.11.0
+idna==3.7
+inflect==7.2.1
+intel-openmp==2021.4.0
+jalali_core==1.0.0
+jdatetime==5.0.0
+Jinja2==3.1.4
+joblib==1.4.2
+kiwisolver==1.4.5
+kombu==5.4.2
+libclang==18.1.1
+lxml==5.2.2
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.0
+mdurl==0.1.2
+medianasms==1.1.0
+ml-dtypes==0.3.2
+more-itertools==10.3.0
+mpmath==1.3.0
+mysqlclient==2.2.4
+namex==0.0.8
+networkx==3.3
+numpy==1.26.4
+opt-einsum==3.3.0
+optree==0.11.0
+packaging==24.1
+pandas==2.2.2
+pillow==11.0.0
+pip==24.0
+prometheus_client==0.21.1
+prompt_toolkit==3.0.48
+protobuf==4.25.3
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pycparser==2.22
+Pygments==2.18.0
+PyMySQL==1.1.1
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+pytz==2024.2
+redis==5.2.1
+reportlab==4.2.0
+requests==2.32.3
+rich==13.7.1
+rq==1.16.2
+scipy==1.13.1
+setuptools==65.5.0
+simfin==1.0.1
+six==1.17.0
+sqlparse==0.5.0
+svglib==1.5.1
+sympy==1.12.1
+tbb==2021.12.0
+termcolor==2.4.0
+threadpoolctl==3.5.0
+tinycss2==1.3.0
+tornado==6.4.2
+tqdm==4.66.4
+typeguard==4.3.0
+typing_extensions==4.12.2
+tzdata==2024.1
+Unidecode==1.3.8
+urllib3==2.2.2
+uvicorn==0.34.0
+vine==5.1.0
+waitress==3.0.0
+wcwidth==0.2.13
+webencodings==0.5.1
+Werkzeug==3.0.3
+wheel==0.43.0
+whitenoise==6.7.0
+wrapt==1.16.0
