--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     depends_on:
       - django
     volumes:
-      - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./infra/nginx/default.conf:/etc/nginx/conf.d/default.conf
 
   celery:
     build:
