--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,3 +1,3 @@
 FROM nginx:latest
 
-COPY infra/nginx/nginx.conf /etc/nginx/nginx.conf
+COPY /infra/nginx/default.conf /etc/nginx/conf.d/default.conf
