--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       - redis
     ports:
       - "8000:8000"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/"]
+      interval: 10s
+      timeout: 5s
+      retries: 5      
 
   nginx:
     build:
@@ -24,7 +29,7 @@ services:
     ports:
       - "80:80"
     depends_on:
-      - django
+      - celery
     volumes:
       - ./infra/nginx/default.conf:/etc/nginx/conf.d/default.conf
 
