--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,3 +1,26 @@
+# Use the official Nginx image as the base
 FROM nginx:latest
 
-COPY /infra/nginx/default.conf /etc/nginx/conf.d/default.conf
+# Install wget to download scripts (if not already available)
+RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
+
+# Create a directory for scripts
+RUN mkdir -p /usr/local/bin/scripts
+
+# Download the wait-for-it.sh script
+RUN wget https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh -O /usr/local/bin/scripts/wait-for-it.sh
+
+# Make the script executable
+RUN chmod +x /usr/local/bin/scripts/wait-for-it.sh
+
+# Remove the default Nginx server block to prevent conflicts
+RUN rm /etc/nginx/conf.d/default.conf
+
+# Copy your custom server block configuration into conf.d
+COPY infra/nginx/default.conf /etc/nginx/conf.d/default.conf
+
+# Set the entrypoint to use the wait-for-it script and then start Nginx
+ENTRYPOINT ["/usr/local/bin/scripts/wait-for-it.sh", "django:8000", "--"]
+
+# Command to start Nginx in the foreground
+CMD ["nginx", "-g", "daemon off;"]
