--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,20 +1,42 @@
+# infra/nginx/default.conf
+
+# Define an upstream named 'django_upstream'
+upstream django_upstream {
+    server django:8000;  # 'django' is the service name in docker-compose.yml
+    keepalive 32;         # Optional: Enable keepalive connections
+}
+
 server {
     listen 80;
-    server_name localhost;
+    server_name 64.21.191.114;  # Replace with your domain or server IP as needed
 
+    # Serve static files
     location /static/ {
-        alias /static/;
+        alias /static/;  # Ensure this path matches Django's STATIC_ROOT
+        # Optionally add caching headers
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
     }
 
+    # Serve media files
     location /media/ {
-        alias /media/;
+        alias /media/;   # Ensure this path matches Django's MEDIA_ROOT
+        # Optionally add caching headers
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
     }
 
+    # Proxy pass all other requests to Django
     location / {
-        proxy_pass http://django:8000;
+        proxy_pass http://django_upstream;  # Use the upstream block
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Optional proxy settings for better performance and security
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 60s;
+        proxy_redirect off;
     }
 }
