--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,7 +1,8 @@
-# Use the official Nginx image as the base
+# infra/nginx/Dockerfile.nginx
+
 FROM nginx:latest
 
-# Install wget to download scripts (if not already available)
+# Install wget to download scripts (if not already present)
 RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
 
 # Create a directory for scripts
@@ -19,8 +20,11 @@ RUN rm /etc/nginx/conf.d/default.conf
 # Copy your custom server block configuration into conf.d
 COPY infra/nginx/default.conf /etc/nginx/conf.d/default.conf
 
-# Set the entrypoint to use the wait-for-it script and then start Nginx
-ENTRYPOINT ["/usr/local/bin/scripts/wait-for-it.sh", "django:8000", "--"]
+# Copy the entrypoint script
+COPY infra/nginx/entrypoint.sh /usr/local/bin/entrypoint.sh
 
-# Command to start Nginx in the foreground
-CMD ["nginx", "-g", "daemon off;"]
+# Make the entrypoint script executable
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
+# Set the entrypoint to use the custom script
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
