--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,10 @@ services:
       interval: 10s
       timeout: 5s
       retries: 30     
+    networks:
+      - app-network
+
+
 
   nginx:
     build:
@@ -32,6 +36,9 @@ services:
       - celery
     volumes:
       - ./infra/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - app-network
+
 
   celery:
     build:
@@ -46,6 +53,9 @@ services:
     depends_on:
       - django
       - redis
+    networks:
+      - app-network
+      
 
   redis:
     build:
@@ -55,6 +65,9 @@ services:
     restart: always
     ports:
       - "6379:6379"
+    networks:
+      - app-network
+
 
   db:
     build:
@@ -66,6 +79,12 @@ services:
       - postgres_data:/var/lib/postgresql/data
     env_file:
       - .env
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
+
+networks:
+  app-network:
+    driver: bridge
