--- a/Dockerfile.django
+++ b/Dockerfile.django
@@ -7,11 +7,14 @@ RUN pip install -r requirements.txt
 
 COPY . /app
 
-# Copy wait-for-it.sh
-COPY infra/django/scripts/wait-for-it.sh /usr/local/bin/scripts/wait-for-it.sh
+# Install necessary packages for wait-for-it.sh (wget)
+RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
+
+# Download wait-for-it.sh
+RUN wget https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh -O /usr/local/bin/wait-for-it.sh
 
 # Make wait-for-it.sh executable
-RUN chmod +x /usr/local/bin/scripts/wait-for-it.sh
+RUN chmod +x /usr/local/bin/wait-for-it.sh
 
 # Copy entrypoint script
 COPY infra/django/entrypoint.sh /usr/local/bin/entrypoint.sh
