--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,11 @@ services:
       - .env
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
