--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,10 @@ services:
       - .env
     networks:
       - app-network
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=inshopping
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
