--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,9 +58,7 @@ services:
       
 
   redis:
-    build:
-      context: .
-      dockerfile: Dockerfile.redis
+    image: redis:latest
     container_name: redis
     restart: always
     ports:
@@ -70,9 +68,7 @@ services:
 
 
   db:
-    build:
-      context: .
-      dockerfile: Dockerfile.postgresql
+    image: postgres:15
     container_name: db
     restart: always
     volumes:
