--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -11,12 +11,12 @@ server {
     server_name 64.21.191.114;  # Replace with your domain or server IP as needed
 
     # Serve static files
-    location /static/ {
-        alias /static/;  # Ensure this path matches Django's STATIC_ROOT
-        # Optionally add caching headers
-        expires 30d;
-        add_header Cache-Control "public, max-age=2592000";
-    }
+   location /static/ {
+    alias /app/collected_static/;  # Match STATIC_ROOT
+    expires 30d;
+    add_header Cache-Control "public, max-age=2592000";
+}
+
 
     # Serve media files
     location /media/ {
