--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -12,16 +12,16 @@ server {
 
     # Serve static files
     location /static/ {
-        alias /app/staticfiles/;  # Match STATIC_ROOT
+        alias /app/staticfiles/;  # Must end with a trailing slash
+        try_files $uri $uri/ =404;  # Ensures Nginx returns a 404 if the file isn't found
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
     }
 
     # Serve media files
     location /media/ {
-        alias /app/media/;  # Match STATIC_ROOT
-
-        # Optionally add caching headers
+        alias /app/media/;  # Must end with a trailing slash
+        try_files $uri $uri/ =404;  # Ensures Nginx returns a 404 if the file isn't found
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
     }
@@ -38,5 +38,16 @@ server {
         proxy_connect_timeout 60s;
         proxy_read_timeout 60s;
         proxy_redirect off;
+
+        # Handle WebSocket connections if needed
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    # Optional: Handle 404 for static and media
+    error_page 404 /404.html;
+    location = /404.html {
+        internal;
     }
 }
