--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3'
+
 services:
   django:
     build:
@@ -7,6 +9,8 @@ services:
     restart: always
     volumes:
       - .:/app
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     env_file:
       - .env
     depends_on:
@@ -22,8 +26,6 @@ services:
     networks:
       - app-network
 
-
-
   nginx:
     build:
       context: .
@@ -33,12 +35,13 @@ services:
     ports:
       - "80:80"
     depends_on:
-      - celery
+      - django  # Changed from 'celery' to 'django'
     volumes:
       - ./infra/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     networks:
       - app-network
-
 
   celery:
     build:
@@ -48,6 +51,8 @@ services:
     restart: always
     volumes:
       - .:/app
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     env_file:
       - .env
     depends_on:
@@ -55,7 +60,6 @@ services:
       - redis
     networks:
       - app-network
-      
 
   redis:
     image: redis:latest
@@ -65,7 +69,6 @@ services:
       - "6379:6379"
     networks:
       - app-network
-
 
   db:
     image: postgres:15
@@ -89,6 +92,8 @@ services:
 
 volumes:
   postgres_data:
+  static_volume:
+  media_volume:
 
 networks:
   app-network:
