--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -8,7 +8,7 @@ upstream django_upstream {
 
 server {
     listen 80;
-    server_name inshopping.net www.inshopping.net;  # Replace with your domain or server IP as needed
+    server_name inshopping.net;  # Replace with your domain or server IP as needed
 
     # Serve static files
     location /static/ {
@@ -50,4 +50,4 @@ server {
     location = /404.html {
         internal;
     }
-}
+} 
