--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,14 +1,33 @@
-# infra/nginx/default.conf
-
 # Define an upstream named 'django_upstream'
 upstream django_upstream {
     server django:8000;  # 'django' is the service name in docker-compose.yml
     keepalive 32;         # Optional: Enable keepalive connections
 }
 
+# Redirect all HTTP traffic to HTTPS
 server {
     listen 80;
-    server_name inshopping.net www.inshopping.com;  # Replace with your domain or server IP as needed
+    server_name inshopping.net www.inshopping.net;
+
+    return 301 https://$host$request_uri;
+}
+
+# HTTPS Server Block
+server {
+    listen 443 ssl;
+    server_name inshopping.net www.inshopping.net;
+
+    # SSL certificate and key
+    ssl_certificate /etc/letsencrypt/live/inshopping.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/inshopping.net/privkey.pem;
+
+    # SSL configurations for better security
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # HSTS settings (optional but recommended)
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
     # Serve static files
     location /static/ {
@@ -50,4 +69,4 @@ server {
     location = /404.html {
         internal;
     }
-} 
+}
