--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -7,7 +7,7 @@ upstream django_upstream {
 # Redirect all HTTP traffic to HTTPS
 server {
     listen 80;
-    server_name inshopping.net www.inshopping.net;
+    server_name inshopping.net;
 
     return 301 https://$host$request_uri;
 }
