--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,14 +1,14 @@
-# Define an upstream named 'django_upstream'
-upstream django_upstream {
-    server django:8000;  # 'django' is the service name in docker-compose.yml
-    keepalive 32;         # Optional: Enable keepalive connections
-}
-
-# Redirect all HTTP traffic to HTTPS
+# Redirect all HTTP traffic to HTTPS except for Certbot challenges
 server {
     listen 80;
     server_name inshopping.net www.inshopping.net;
 
+    # Allow Certbot to access the challenge directory
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;  # This directory will hold challenge files
+    }
+
+    # Redirect all other HTTP traffic to HTTPS
     return 301 https://$host$request_uri;
 }
 
@@ -45,9 +45,9 @@ server {
         add_header Cache-Control "public, max-age=2592000";
     }
 
-    # Proxy pass all other requests to Django
+    # Proxy to Django
     location / {
-        proxy_pass http://django_upstream;  # Use the upstream block
+        proxy_pass http://django_upstream;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
