--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -3,12 +3,13 @@ server {
     listen 80;
     server_name inshopping.net www.inshopping.net;
 
-    # Allow Certbot to access the challenge directory
+       # Allow Certbot to access the challenge directory
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;  # This directory will hold challenge files
+        root /var/www/certbot;  # Directory Certbot uses to store challenge files
+        allow all;
     }
 
-    # Redirect all other HTTP traffic to HTTPS
+    # Redirect HTTP to HTTPS
     return 301 https://$host$request_uri;
 }
 
