--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -4,6 +4,7 @@ server {
     server_name inshopping.net www.inshopping.net;
 
        # Allow Certbot to access the challenge directory
+      # Allow Certbot to access the challenge directory
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;  # Directory Certbot uses to store challenge files
         allow all;
