--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,17 +1,18 @@
-# Redirect all HTTP traffic to HTTPS except for Certbot challenges
+# HTTP Server Block (Redirect all HTTP traffic to HTTPS except for Certbot challenges)
 server {
     listen 80;
     server_name inshopping.net www.inshopping.net;
 
-       # Allow Certbot to access the challenge directory
-      # Allow Certbot to access the challenge directory
+    # Redirect all HTTP traffic to HTTPS except for Certbot challenges
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;  # Directory Certbot uses to store challenge files
-        allow all;
+        root /var/www/certbot;
+        try_files $uri =404;
     }
 
-    # Redirect HTTP to HTTPS
-    return 301 https://$host$request_uri;
+    # Redirect all other HTTP traffic to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 # HTTPS Server Block
