--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -3,13 +3,15 @@ server {
     listen 80;
     server_name inshopping.net www.inshopping.net;
 
-    # Redirect all HTTP traffic to HTTPS except for Certbot challenges
+        # Webroot directory for Let's Encrypt
+    root /var/www/certbot;
+
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
         try_files $uri =404;
     }
 
-    # Redirect all other HTTP traffic to HTTPS
+    # Redirect HTTP to HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
