--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,29 +1,12 @@
-# HTTP Server Block (Redirect all HTTP traffic to HTTPS except for Certbot challenges)
-server {
-    listen 80;
-    server_name inshopping.net www.inshopping.net;
-
-   
-
-   
+# Define an upstream named 'django_upstream'
+upstream django_upstream {
+    server django:8000;  # 'django' is the service name in docker-compose.yml
+    keepalive 32;         # Optional: Enable keepalive connections
 }
 
-# HTTPS Server Block
 server {
-    listen 443 ssl;
-    server_name inshopping.net www.inshopping.net;
-
-    # SSL certificate and key
-    ssl_certificate /etc/letsencrypt/live/inshopping.net/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/inshopping.net/privkey.pem;
-
-    # SSL configurations for better security
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-
-    # HSTS settings (optional but recommended)
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    listen 80;
+    server_name inshopping.net www.inshopping.com;  # Replace with your domain or server IP as needed
 
     # Serve static files
     location /static/ {
@@ -41,9 +24,9 @@ server {
         add_header Cache-Control "public, max-age=2592000";
     }
 
-    # Proxy to Django
+    # Proxy pass all other requests to Django
     location / {
-        proxy_pass http://django_upstream;
+        proxy_pass http://django_upstream;  # Use the upstream block
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -65,4 +48,4 @@ server {
     location = /404.html {
         internal;
     }
-}
+} 
