--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -6,8 +6,13 @@ upstream django_upstream {
 
 server {
     listen 80;
-    server_name inshopping.net www.inshopping.com;  # Replace with your domain or server IP as needed
+    server_name inshopping.net;  # Replace with your domain or server IP as needed
+    
+    root /var/www/your_site;
+    index index.html index.htm;
 
+    # Redirect all HTTP traffic to HTTPS
+    return 301 https://$host$request_uri;
     # Serve static files
     location /static/ {
         alias /app/staticfiles/;  # Must end with a trailing slash
