--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,3 +1,5 @@
+# infra/nginx/default.conf
+
 # Define an upstream named 'django_upstream'
 upstream django_upstream {
     server django:8000;  # 'django' is the service name in docker-compose.yml
@@ -6,13 +8,12 @@ upstream django_upstream {
 
 server {
     listen 80;
-    server_name inshopping.net;  # Replace with your domain or server IP as needed
-    
-    root /var/www/your_site;
-    index index.html index.htm;
-
-    # Redirect all HTTP traffic to HTTPS
+    server_name inshopping.net;  
+        # Redirect HTTP to HTTPS
     return 301 https://$host$request_uri;
+
+
+
     # Serve static files
     location /static/ {
         alias /app/staticfiles/;  # Must end with a trailing slash
