--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -7,7 +7,6 @@ upstream django_upstream {
 }
 
 server {
-    listen 80;
     server_name inshopping.net;  
         # Redirect HTTP to HTTPS
     return 301 https://$host$request_uri;
@@ -54,4 +53,24 @@ server {
     location = /404.html {
         internal;
     }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/inshopping.net-0001/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/inshopping.net-0001/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
 } 
+
+server {
+    if ($host = inshopping.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name inshopping.net;
+    return 404; # managed by Certbot
+
+
+}
