--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,4 +1,8 @@
 # HTTP to HTTPS redirection
+upstream django_upstream {
+    server 127.0.0.1:8000;
+}
+
 server {
     listen 80;
     server_name inshopping.net;
