--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -5,7 +5,7 @@ upstream django_upstream {
 
 server {
     listen 80;
-    server_name inshopping.net;
+    server_name inshopping.net www.inshopping.net;
 
    
     return 301 https://$host$request_uri;
