--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -9,6 +9,20 @@ server {
 
    
     return 301 https://$host$request_uri;
+      location /static/ {
+        alias /app/staticfiles/;
+        try_files $uri $uri/ =404;
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
+    }
+
+    # Serve media files
+    location /media/ {
+        alias /app/media/;
+        try_files $uri $uri/ =404;
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
+    }
 }
 
 server {
