--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,64 +1,51 @@
-# HTTP to HTTPS redirection
+# Define an upstream named 'django_upstream'
 upstream django_upstream {
-    server 127.0.0.1:8000;
+    server django:8000;  # 'django' is the service name in docker-compose.yml
+    keepalive 32;         # Optional: Enable keepalive connections
 }
 
 server {
     listen 80;
-    server_name inshopping.net www.inshopping.net;
-
-   
-    return 301 https://$host$request_uri;
-      location /static/ {
-        alias /app/staticfiles/;
-        try_files $uri $uri/ =404;
-        expires 30d;
-        add_header Cache-Control "public, max-age=2592000";
-    }
-
-    # Serve media files
-    location /media/ {
-        alias /app/media/;
-        try_files $uri $uri/ =404;
-        expires 30d;
-        add_header Cache-Control "public, max-age=2592000";
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name inshopping.net;
-
-    ssl_certificate /etc/letsencrypt/live/inshopping.net-0001/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/inshopping.net-0001/privkey.pem;
+    server_name inshopping.net www.inshopping.net;  # Replace with your domain or server IP as needed
 
     # Serve static files
     location /static/ {
-        alias /app/staticfiles/;
-        try_files $uri $uri/ =404;
+        alias /app/staticfiles/;  # Must end with a trailing slash
+        try_files $uri $uri/ =404;  # Ensures Nginx returns a 404 if the file isn't found
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
     }
 
     # Serve media files
     location /media/ {
-        alias /app/media/;
-        try_files $uri $uri/ =404;
+        alias /app/media/;  # Must end with a trailing slash
+        try_files $uri $uri/ =404;  # Ensures Nginx returns a 404 if the file isn't found
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
     }
 
     # Proxy pass all other requests to Django
     location / {
-        proxy_pass http://django_upstream;  # Adjust as needed
+        proxy_pass http://django_upstream;  # Use the upstream block
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Optional proxy settings
+        # Optional proxy settings for better performance and security
         proxy_connect_timeout 60s;
         proxy_read_timeout 60s;
         proxy_redirect off;
+
+        # Handle WebSocket connections if needed
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
-}
+
+    # Optional: Handle 404 for static and media
+    error_page 404 /404.html;
+    location = /404.html {
+        internal;
+    }
+}                 
