--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -9,7 +9,7 @@ upstream django_upstream {
 
 server {
     listen 80;
-    server_name inshopping.net;  # Replace with your domain or server IP as needed
+    server_name inshopping.net www.inshopping.net;  # Replace with your domain or server IP as needed
 
     # Serve static files
     location /static/ {
