--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -4,17 +4,28 @@ upstream django_upstream {
     keepalive 32;         # Optional: Enable keepalive connections
 }
 
-
-
-
 server {
     listen 80;
-    server_name inshopping.net www.inshopping.net;  # Replace with your domain or server IP as needed
+    server_name inshopping.net www.inshopping.net;
+
+    # Redirect all HTTP traffic to HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name inshopping.net www.inshopping.net;
+
+    # SSL certificate files
+    ssl_certificate /etc/ssl/certs/inshopping.net.crt;   # مسیر فایل گواهی SSL
+    ssl_certificate_key /etc/ssl/private/inshopping.net.key;   # مسیر کلید خصوصی
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     # Serve static files
     location /static/ {
         alias /app/staticfiles/;  # Must end with a trailing slash
-        try_files $uri $uri/ =404;  # Ensures Nginx returns a 404 if the file isn't found
+        try_files $uri $uri/ =404;
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
     }
@@ -22,7 +33,7 @@ server {
     # Serve media files
     location /media/ {
         alias /app/media/;  # Must end with a trailing slash
-        try_files $uri $uri/ =404;  # Ensures Nginx returns a 404 if the file isn't found
+        try_files $uri $uri/ =404;
         expires 30d;
         add_header Cache-Control "public, max-age=2592000";
     }
@@ -35,7 +46,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Optional proxy settings for better performance and security
         proxy_connect_timeout 60s;
         proxy_read_timeout 60s;
         proxy_redirect off;
@@ -51,4 +61,4 @@ server {
     location = /404.html {
         internal;
     }
-}                 
+}
