--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -9,7 +9,7 @@ server {
     server_name inshopping.net www.inshopping.net;
 
     # Redirect all HTTP traffic to HTTPS
-    return 301 https://$host$request_uri;
+    # return 301 https://$host$request_uri;
 }
 
 server {
