--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -17,8 +17,8 @@ server {
     server_name inshopping.net www.inshopping.net;
 
     # SSL certificate files
-    ssl_certificate /etc/ssl/certs/inshopping.net.crt;   # مسیر فایل گواهی SSL
-    ssl_certificate_key /etc/ssl/private/inshopping.net.key;   # مسیر کلید خصوصی
+    ssl_certificate /etc/nginx/ssl/server.crt;
+    ssl_certificate_key /etc/nginx/ssl/server.key;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
