--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,27 +1,42 @@
-# infra/nginx/Dockerfile.nginx
-
+# Start from the official nginx image
 FROM nginx:latest
 
 # Install wget to download scripts (if not already present)
 RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
 
-# Install necessary packages for wait-for-it.sh (wget)
-RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
-
 # Download wait-for-it.sh
-RUN wget https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh -O /usr/local/bin/wait-for-it.sh
+RUN wget https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh \
+    -O /usr/local/bin/wait-for-it.sh
 
 # Make wait-for-it.sh executable
 RUN chmod +x /usr/local/bin/wait-for-it.sh
 
 # Copy entrypoint script
 COPY infra/nginx/entrypoint.sh /usr/local/bin/entrypoint.sh
-
-# Make entrypoint.sh executable
 RUN chmod +x /usr/local/bin/entrypoint.sh
+
+# -----------------------------
+# SSL-RELATED CHANGES BELOW
+# -----------------------------
+
+# Create a directory for SSL certs inside the container
+RUN mkdir -p /etc/nginx/ssl
+
+# Copy your existing SSL certificate and key into the container
+# (Adjust paths as necessary if your cert files are named differently or live elsewhere)
+COPY infra/nginx/inshopping_net.chained.crt /etc/nginx/ssl/server.crt
+COPY infra/nginx/server.key /etc/nginx/ssl/server.key
+
+# Expose port 443 (HTTPS), in addition to port 80
+EXPOSE 80
+EXPOSE 443
+
+# (Optional) If you have a custom Nginx config with SSL directives,
+# copy it into /etc/nginx/conf.d/ or /etc/nginx/nginx.conf
+# COPY infra/nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Set the entrypoint to use the custom script
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
-
+# Run Nginx in the foreground
 CMD ["nginx", "-g", "daemon off;"]
