--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,17 +1,23 @@
 # Define an upstream named 'django_upstream'
 upstream django_upstream {
     server django:8000;  # 'django' is the service name in docker-compose.yml
-    keepalive 32;         # Optional: Enable keepalive connections
+    keepalive 32;        # Optional: Enable keepalive connections
 }
 
+# -----------------------------
+# 1) SERVER BLOCK FOR HTTP (80)
+# -----------------------------
 server {
     listen 80;
     server_name inshopping.net www.inshopping.net;
 
     # Redirect all HTTP traffic to HTTPS
-    # return 301 https://$host$request_uri;
+    return 301 https://$host$request_uri;
 }
 
+# ------------------------------
+# 2) SERVER BLOCK FOR HTTPS (443)
+# ------------------------------
 server {
     listen 443 ssl;
     server_name inshopping.net www.inshopping.net;
